[ CV ] » Estilos actualizados

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!--     NAVBAR     -->
     <!-- ────────────── -->
 
-    <nav hidden>
+    <nav>
         <a class="item smooth-scrolling" href="#bienvenida">
             <i class="icono fa fa-user fa-fw" aria-hidden="true"></i>
             <span class="texto">Bienvenido</span>
@@ -410,7 +410,8 @@
     <!-- ───────────────── -->
 
     <aside id="curriculo">
-        <p class="texto wow fadeIn">Cuando no sepas <span>cómo</span> iniciar, continuar o finalizar un procedimiento judicial, acude a la <span>Ley Procesal</span></p>
+        <p class="texto wow fadeIn">Descarga mi <span>currículo</span> en pdf</p>
+        <a class="boton" href="cv.pdf" target="_blank" title="Descargar currículo">Descargar</a>
         <div class="overlay ruido"></div>
     </aside>
 
