[ General ] » Favicon y preloader actualizados

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"    content="Asistencia, Asistente, Legal, Asistencia Legal, Asistente Legal, Paralegal, Derecho, Abogacía, Las Palmas, Las Palmas de Gran Canaria">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- Web Title -->
     <title>Soledad Poveda - Asistencia Legal en Las Palmas</title>
@@ -53,7 +53,7 @@
 
     <!-- Preloader -->
     <div id="preloader">
-        <img class="spinner" src="img/preloader.png" alt="Preloader">
+        <img class="spinner" src="img/preloader.svg" alt="Preloader">
     </div>
 
     <!-- ────────────── -->
