--- a/legal.html
+++ b/legal.html
@@ -3,16 +3,17 @@
 
 <head>
 
-    <!-- Page Title -->
-    <title>Soledad Poveda Paralegal</title>
+    <meta charset="utf-8">
+    <meta name="viewport"    content="width=device-width, initial-scale=1">
+    <meta name="author"      content="Saulo Poveda Montesdeoca">
+    <meta name="description" content="Soledad Poveda Montesdeoca - Asistencia Legal en Las Palmas de Gran Canaria">
+    <meta name="keywords"    content="Asistencia, Asistente, Legal, Asistencia Legal, Asistente Legal, Paralegal, Derecho, Abogacía, Las Palmas, Las Palmas de Gran Canaria">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Saulo Poveda Montesdeoca">
-    <meta name="description" content="Página web oficial de Soledad Poveda Paralegal">
+    <!-- Web Title -->
+    <title>Soledad Poveda - Asistencia Legal en Las Palmas</title>
 
     <!-- ─────────── -->
     <!--     CSS     -->
@@ -28,17 +29,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     
     <!-- Local -->
-    <link rel="stylesheet" href="css/preloader.css">
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- ───────────── -->
     <!--     FONTS     -->
     <!-- ───────────── -->
 
-    <!-- Lato -->
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
-    <!-- Playfair Display -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
 
     <!-- Font Awesome CDN -->
@@ -46,30 +44,30 @@
 
 </head>
 
-<body id="top">
+<body id="top" style="overflow: visible">
+
+    <!-- Top Button -->
+    <a class="top-button smooth-scrolling" href="#top" title="Volver arriba" style="right: 25px">
+        <i class="fa fa-angle-up" aria-hidden="true"></i>
+    </a>
 
     <!-- Preloader -->
     <div id="preloader">
-        <img class="spinner" src="img/preloader.png" alt="Preloader">
+        <img class="spinner" src="img/preloader.svg" alt="Preloader">
     </div>
-
-    <!-- Top Button -->
-    <a class="top-button page-scroll" href="#top" title="Volver arriba">
-        <i class="fa fa-angle-up" aria-hidden="true"></i>
-    </a>
 
     <!-- ─────────────────── -->
     <!--     INFORMATION     -->
     <!-- ─────────────────── -->
 
-    <section id="legal" class="wow fadeIn">
-        <h2>Política de privacidad</h2>
-        <hr>
-        <div class="container">
+    <section id="legal">
+        <div class="container wow fadeIn">
+            <h3>Política de privacidad</h3>
+            <hr>
             <p>
                 Respetando lo establecido en la legislación vigente, SOLEDAD POVEDA MONTESDEOCA (en adelante, también página web www.soledadparalegal.com) se compromete a adoptar las medidas técnicas y organizativas necesarias, según el nivel de seguridad adecuado al riesgo de los datos recogidos.
             </p>
-            <h3>Leyes que incorpora esta política de privacidad</h3>
+            <h4>Leyes que incorpora esta política de privacidad</h4>
             <p>
                 Esta política de privacidad está adaptada a la normativa española y europea vigente en materia de protección de datos personales en internet. En concreto, la misma respeta las siguientes normas:
             </p>
@@ -87,7 +85,7 @@
                     La Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y de Comercio Electrónico (LSSI-CE).
                 </li>
             </ul>
-            <h3>Identidad del responsable del tratamiento de los datos personales</h3>
+            <h4>Identidad del responsable del tratamiento de los datos personales</h4>
             <p>
                 El responsable del tratamiento de los datos personales recogidos en www.soledadparalegal.com es SOLEDAD POVEDA MONTESDEOCA
             </p>
@@ -105,7 +103,7 @@
                     Email de contacto: info@soledadparalegal.com
                 </li>
             </ul>
-            <h3>Registro de datos de carácter personal</h3>
+            <h4>Registro de datos de carácter personal</h4>
             <p>
                 El tratamiento de los datos personales del usuario se someterá a los siguientes principios recogidos en el artículo 5 del RGPD:
             </p>
@@ -132,11 +130,11 @@
                     Principio de responsabilidad proactiva: el Responsable del tratamiento será responsable de asegurar que los principios anteriores se cumplen.
                 </li>
             </ul>
-            <h3>Categoría de datos personales</h3>
+            <h4>Categoría de datos personales</h4>
             <p>
                 Las categorías de datos que se tratan en www.soledadparalegal.es, por SOLEDAD POVEDA MONTESDEOCA son únicamente datos identificativos. En ningún caso, se tratan categorías especiales de datos personales en el sentido del artículo 9 del RGPD.
             </p>
-            <h3>Base legal para el tratamiento de los datos personales</h3>
+            <h4>Base legal para el tratamiento de los datos personales</h4>
             <p>
                 La base legal para el tratamiento de los datos personales es el consentimiento. SOLEDAD POVEDA MONTESDEOCA se compromete a recabar el consentimiento expreso y verificable del usuario para el tratamiento de sus datos personales para uno o varios fines específicos.
             </p>
@@ -146,7 +144,7 @@
             <p>
                 En las ocasiones en las que el Usuario deba o pueda facilitar sus datos a través de formularios para realizar consultas, solicitar información o por motivos relacionados con el contenido de la página web, se le informará en caso de que la cumplimentación de alguno de ellos sea obligatoria debido a que los mismos sean imprescindibles para el correcto desarrollo de la operación realizada.
             </p>
-            <h3>Fines del tratamiento a que se destinan los datos personales</h3>
+            <h4>Fines del tratamiento a que se destinan los datos personales</h4>
             <p>
                 Los datos personales son recabados y gestionados por SOLEDAD POVEDA MONTESDEOCA con la finalidad de poder facilitar, agilizar y cumplir los compromisos establecidos entre la página web y el usuario o el mantenimiento de la relación que se establezca en los formularios que este último rellene o para atender una solicitud o consulta.
             </p>
@@ -156,11 +154,11 @@
             <p>
                 En el momento en que se obtengan los datos personales, se informará al usuario acerca del fin o fines específicos del tratamiento a que se destinarán los datos personales; es decir, del uso o usos que se dará a la información recopilada.
             </p>
-            <h3>Períodos de retención de los datos personales</h3>
+            <h4>Períodos de retención de los datos personales</h4>
             <p>
                 Los datos personales solo serán retenidos durante el tiempo mínimo necesario para los fines de su tratamiento y, en todo caso, únicamente durante el siguiente plazo: 18 meses, o hasta que el usuario solicite su supresión.
             </p>
-            <h3>Principio de veracidad de los datos</h3>
+            <h4>Principio de veracidad de los datos</h4>
             <p>
                 El destinatario del servicio será el único responsable de la veracidad y exactitud de los datos aportados, actuando SOLEDAD POVEDA MONTESDEOCA, de buena fe como mero prestador del servicio.
             </p>
@@ -170,15 +168,15 @@
             <p>
                 Con la finalidad de dar cumplimiento a lo establecido en el artículo 4.3 de la LOPD, el destinatario del servicio se compromete a comunicar a SOLEDAD POVEDA MONTESDEOCA. los cambios que se produzcan en sus datos, de forma que respondan con veracidad a su situación actual en todo momento.
             </p>
-            <h3>Principio de seguridad de los datos</h3>
+            <h4>Principio de seguridad de los datos</h4>
             <p>
                 SOLEDAD POVEDA MONTESDEOCA se compromete al cumplimiento de su obligación de secreto respecto de los datos de carácter personal y de su deber de guardarlos y adoptará todas las medidas de índole técnica y organizativa necesarias que garanticen la seguridad de los datos de carácter personal y eviten su alteración, pérdida, tratamiento o acceso no autorizado, habida cuenta del estado de la tecnología, la naturaleza de los datos almacenados y los riesgos a que estén expuestos, ya provengan de la acción humana o del medio físico o natural, desarrolladas en el Título VIII del Real Decreto 1720/2007, de 21 de diciembre, por el que se aprueba el Reglamento de desarrollo de la Ley Orgánica 15/1999, de 13 de diciembre, de Protección de Datos de Carácter Personal.
             </p>
-            <h3>Ejercicio de derechos</h3>
+            <h4>Ejercicio de derechos</h4>
             <p>
                 En cumplimiento de lo establecido en la LOPD y el Real Decreto 1720/2007, de 21 de diciembre, por el que se aprueba el Reglamento de desarrollo de la misma, el destinatario del servicio puede ejercitar, en cualquier momento, sus derechos de acceso, rectificación, cancelación y oposición ante el responsable del fichero o del tratamiento, adjuntando fotocopia de su DNI.
             </p>
-            <h3>Reclamaciones ante la autoridad de control</h3>
+            <h4>Reclamaciones ante la autoridad de control</h4>
             <p>
                 En caso de que el Usuario considere que existe un problema o infracción de la normativa vigente en la forma en la que se están tratando sus datos personales, tendrá derecho a la tutela judicial efectiva y a presentar una reclamación ante una autoridad de control, en particular, en el Estado en el que tenga su residencia habitual, lugar de trabajo o lugar de la supuesta infracción.
             </p>
@@ -188,7 +186,7 @@
             <p>
                 En cumplimiento de lo establecido en la LOPD y el Real Decreto 1720/2007, de 21 de diciembre, por el que se aprueba el Reglamento de desarrollo de la misma, el destinatario del servicio puede ejercitar, en cualquier momento, sus derechos de acceso, rectificación, cancelación y oposición ante el responsable del fichero o del tratamiento, adjuntando fotocopia de su DNI.
             </p>
-            <p>
+            <p class="marginless">
                 Esta Política de Privacidad y de Cookies está actualizada para adaptarse al Reglamento (UE) 2016/679 del Parlamento Europeo y del Consejo, de 27 de abril de 2016, relativo a la protección de las personas físicas en lo que respecta al tratamiento de datos personales y a la libre circulación de estos datos (RGPD).
             </p>
         </div>
@@ -198,24 +196,10 @@
     <!--     FOOTER     -->
     <!-- ────────────── -->
 
-    <footer>
-        <div class="rrss">
-            <a class="rrss facebook" href="#" title="Perfil oficial de Facebook">
-                <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a class="rrss twitter" href="https://twitter.com/canparalegal" title="Perfil oficial de Twitter">
-                <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a class="rrss linkedin" href="#" title="Perfil oficial de LinkedIn">
-                <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
-            </a>
-        </div>
-        <div class="legal">
-            <a href="legal.html">Política de privacidad</a>
-            <a href="cookies.html">Política de cookies</a>
-        </div>
+    <footer style="border: none">
         <div class="copyright">
-            <p>&copy; Soledad Poveda <span>Paralegal</span></p>
+            &copy; Soledad Poveda <span>Paralegal</span>
+            <div class="overlay"></div>
         </div>
     </footer>
 
@@ -229,14 +213,14 @@
     <!-- Bootstrap JS CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- WOW -->
-    <script src="js/animations/wow.min.js"></script>
+    <!-- jQuery Easing CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
-    <!-- Scrolling navbar -->
-    <script src="js/scrolling/jquery.easing.min.js"></script>
-    <script src="js/scrolling/scrolling-nav.js"></script>
+    <!-- WOW -->
+    <script src="js/wow.min.js"></script>
 
     <!-- Local -->
     <script src="js/functions.js"></script>
+
 </body>
 </html>
