[ Legal ] » Código refactorizado

--- a/legal.html
+++ b/legal.html
@@ -44,10 +44,10 @@
 
 </head>
 
-<body id="top" style="overflow: visible">
+<body id="top" class="legal">
 
     <!-- Top Button -->
-    <a class="top-button smooth-scrolling" href="#top" title="Volver arriba" style="right: 25px">
+    <a class="top-button smooth-scrolling" href="#top" title="Volver arriba">
         <i class="fa fa-angle-up" aria-hidden="true"></i>
     </a>
 
@@ -60,7 +60,7 @@
     <!--     INFORMATION     -->
     <!-- ─────────────────── -->
 
-    <section id="legal">
+    <section>
         <div class="container wow fadeIn">
             <h3>Política de privacidad</h3>
             <hr>
