[ Footer ] » Los enlaces legales se abren en pestañas nuevas

--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
 
     <footer>
         <div class="legal">
-            <a href="cookies.html">Política de cookies</a>
-            <a href="legal.html">Política de privacidad</a>
+            <a href="cookies.html" target="_blank">Política de cookies</a>
+            <a href="legal.html" target="_blank">Política de privacidad</a>
         </div>
         <div class="copyright">
             &copy; Soledad Poveda <span>Paralegal</span>
