[ Experiencia ] » El nombre de una empresa estaba mal

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <meta name="description" content="Soledad Poveda Montesdeoca - Asistencia Legal en Las Palmas de Gran Canaria">
     <meta name="keywords"    content="Asistencia, Asistente, Legal, Asistencia Legal, Asistente Legal, Paralegal, Derecho, Abogacía, Las Palmas, Las Palmas de Gran Canaria">
 
-    <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
 
-    <!-- Web Title -->
     <title>Soledad Poveda - Asistencia Legal en Las Palmas</title>
 
     <!-- ─────────── -->
@@ -172,7 +170,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
                     <div class="item wow fadeIn">
-                        <span class="empresa">Baltar y Asociados S.L.P.</span>
+                        <span class="empresa">Baltar y Abogados S.L.P.</span>
                         <div  class="overlay"></div>
                     </div>
                 </div>
